test/files/neg/unchecked-impossible.check
unchecked-impossible.scala:5: error: fruitless type test: a value of type T2[Int,Int] cannot also be a Seq[A]
    case Seq(x) =>
            ^
one error found
